# contriboo-lib

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: coverage.yaml  markdownlint.yaml  mypy.yaml  pytest.yaml  ruff.yaml  security.yaml
examples/: count_ writed_lines_codes.py
src/contriboo/: __init__.py  client.py  settings.py
src/contriboo/integrations/git/: __init__.py  gateway.py  subprocess_gateway.py
src/contriboo/integrations/github/: __init__.py  dto.py  requests_provider.py
src/contriboo/profile/: __init__.py  interfaces.py  models.py  service.py
src/contriboo/repository/: __init__.py
